--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-leap-day
 title: How to
+description: Questa pagina raccoglie i macchinari che puoi utilizzare al FabLab Torino e tutto ciò che devi sapere prima di usarli!
