--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-leap-day
-title: How to
-description: Questa pagina raccoglie i macchinari che puoi utilizzare al FabLab Torino e tutto ciò che devi sapere prima di usarli!
+theme: jekyll-theme-slate
+title: How To
+description: Questa pagina raccoglie i macchinari che puoi utilizzare a FabLab Torino e tutto ciò che devi sapere prima di usarli!
